tests/ok/pointer-add.ari
fn distance_i64() -> i64 {
  let base: ptr i64 = 100u64 as ptr i64;
  let shifted: ptr i64 = ptr_add(base, 2);
  return ((shifted as u64) - (base as u64)) as i64;
}

fn distance_u8() -> i64 {
  let base: ptr u8 = 200u64 as ptr u8;
  let shifted: ptr u8 = mem::ptr_add(base, 3);
  return ((shifted as u64) - (base as u64)) as i64;
}

fn main() -> i64 {
  return distance_i64() + distance_u8();
}
