tests/errors/prelude-read-line-freestanding.ari
fn main() -> i64 {
  let line = read_line();
  let ignored = line;
  return 0;
}
